--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   cloud_firestore:
+  firebase_auth:
 
 
 # For information on the generic Dart part of this file, see the
