--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/xlsx": "^0.0.36",
     "class-variance-authority": "^0.7.0",
@@ -20,8 +23,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-debug-screens": "^2.2.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
