--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.1",
-    "lucide-react": "^0.439.0",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-debug-screens": "^2.2.1",
