--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-debug-screens": "^2.2.1",
